# chowdsp_polyphase_fir

./: .gitignore  CMakeLists.txt  LICENSE  README.md  chowdsp_polyphase_fir.cpp  chowdsp_polyphase_fir.h
.github/workflows/: test.yml
bench/: CMakeLists.txt  bench.cpp
simd/: chowdsp_polyphase_fir_impl_avx.cpp  chowdsp_polyphase_fir_impl_neon.cpp  chowdsp_polyphase_fir_impl_sse.cpp
test/: CMakeLists.txt  test.cpp
